# dmshm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
config/: dmshmagent.csv  dmshmserver.csv
examples/dmshmagent/: dmshmagentmain.cpp
examples/dmshmipc-client/: dmshmipc-client.cc
examples/dmshmipc-server/: dmshmipc-server.cc
include/: dmconsole.h  dmcore.h  dmformat.h  dmipcshm.h  dmmoduleptr.h  dmos.h  dmshm.h  dmsingleipc.h
src/: dmshm.cpp
src/dmshm/: dmatomic_shm_queue.h  dmconsole.h  dmipcshm.cpp  dmipcshm_impl.cpp  dmipcshm_impl.h  dmparser.h  dmshm.cpp  dmtime.h  libdmsingleipc_impl.cpp  libdmsingleipc_impl.h
test/: dmshmagent.cpp  dmshmagent.h  dmshmagentmain.cpp  dmshmserver.cpp  dmshmserver.h  gshmserver.cpp
test/dmshmagent/: dmshmagent.cpp  dmshmagent.h  dmshmagentmain.cpp
test/dmshmipc-server/: dmshmipc-server.cc
test/dmshmipc-test/: dmshmipc-test.cc
test/dmshmserver/: dmshmserver.cpp  dmshmservermain.cpp
