cmake_minimum_required(VERSION 2.8)

PROJECT(dmshm)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

ADD_DEFINITIONS(-DUSE_GSHMLOG)
IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

FILE(GLOB_RECURSE DMSHMLOG_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/include/*.c
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)

ADD_LIBRARY(dmshm ${DMSHMLOG_SOURCES})

FILE(GLOB_RECURSE DMSHMAGENT_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/dmshmagent.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/dmshmagentmain.cpp)

ADD_EXECUTABLE(dmshmagent ${DMSHMAGENT_SOURCES})
TARGET_LINK_LIBRARIES(dmshmagent dmshm)

FILE(GLOB_RECURSE DMSHMSERVER_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/dmshmserver.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/dmshmservermain.cpp)

ADD_EXECUTABLE(dmshmserver ${DMSHMSERVER_SOURCES})
TARGET_LINK_LIBRARIES(dmshmserver dmshm)

ADD_CUSTOM_COMMAND(
TARGET dmshmagent
PRE_BUILD
COMMAND ${CMAKE_COMMAND} -E copy_if_different
${CMAKE_CURRENT_SOURCE_DIR}/config/dmshmagent.csv
$<TARGET_FILE_DIR:dmshmagent>
)

ADD_CUSTOM_COMMAND(
TARGET dmshmserver
PRE_BUILD
COMMAND ${CMAKE_COMMAND} -E copy_if_different
${CMAKE_CURRENT_SOURCE_DIR}/config/dmshmserver.csv
$<TARGET_FILE_DIR:dmshmserver>
)
